--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
   "dependencies": {
     "argon2": "^0.28.2",
     "axios": "^0.24.0",
+    "axios-cookiejar-support": "^2.0.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "tough-cookie": "^4.0.0",
+    "xml2js": "^0.4.23"
   }
 }
